# advent_of_code

2019/: AStar.hpp  CMakeLists.txt  IntCode.hpp  a_star.cpp  day_01_rocket_equation.cpp  day_02_alarm.cpp  day_03_crossed_wires.cpp  day_10_monitoring_station_1.cpp  day_10_monitoring_station_2.cpp  day_11_space_police_1.cpp  day_11_space_police_2.cpp  day_12_nbody_problem_1.cpp  day_12_nbody_problem_2.cpp  day_13_care_package_1.cpp  day_13_care_package_2.cpp  day_14_space_stoichiometry_1.cpp  day_15_oxygen_system_1.cpp  day_15_oxygen_system_2.cpp  day_16_flawed_frequency_transmission_1.cpp  day_16_flawed_frequency_transmission_2.cpp  day_17_set_and_forget_1.cpp  day_18_mnay-worlds_interpretation_1.cpp  day_19_part_two_hack.cpp  day_19_tractor_beam_1.cpp  day_19_tractor_beam_2.cpp  day_1_rocket_equation.cpp  day_1_rocket_equation_1.cpp  day_1_rocket_equation_2.cpp  day_21_springoid_adventure_1.cpp  day_21_springoid_adventure_2.cpp  day_22_slam_shuffle_1.cpp  day_23_category_six_1.cpp  day_24_planet_of_discord.cpp  day_24_planet_of_discord_2.cpp  day_2_alarm_1.cpp  day_2_alarm_2.cpp  day_3_crossed_wires_1.cpp  day_3_crossed_wires_2.cpp  day_4_secure_container_1.cpp  day_4_secure_container_2.cpp  (+10 more)
2019/inputs/: day_7_amplification_circuit_exemple2.txt  day_7_amplification_circuit_exemple3.txt
doctest/: doctest.h
